sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: not found: value vat
  vat tab = new Array[Int];
  ^AlgBubbleSort1:9: error: not found: value tab
      if(tab(i)>tab(i+1)){
         ^AlgBubbleSort1:9: error: not found: value tab
      if(tab(i)>tab(i+1)){
                ^AlgBubbleSort1:10: error: not found: value tab
        val tmp = tab(i);
                  ^AlgBubbleSort1:11: error: not found: value tab
        tab(i)=tab(i+1);
        ^AlgBubbleSort1:11: error: not found: value tab
        tab(i)=tab(i+1);
               ^AlgBubbleSort1:12: error: not found: value tab
				tab(i+1)=tmp;
                                ^