sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var swapped = true
	var i : Int = 0;
  vat tab = new Array[Int];
  while (swapped){
    swapped = false;
    for(i<-0 to  getNombreValeurs -2){
      if(tab(i)>tab(i+1)){
        val tmp = tab(i);
        tab(i)=tab(i+1);
				tab(i+1)=tmp;
        swapped = true;
      }
    }
  }
}
